@@ -1,6 +1,7 @@
 
 Development version (next release)
 - Updated to version 8.0 of the CLCudaAPI C++11 OpenCL header
+- Greatly improved the way exceptions are handled in the library (thanks to 'intelfx')
 - Improved performance of GEMM kernels for small sizes by using a direct single-kernel implementation
 - Fixed a bug in the tests and samples related to waiting for an invalid event
 - Fixed a bug in the SYRK/SYR2K/HERK/HER2K routines that would occur with specific tuning parameters
